# MAI-HL-class

./: .gitignore  CMakeLists.txt  DockerChat  DockerUser  DockerWall  Dockerfile  DockerfileUser  README.md  addvars.sh  commands.sql  components.md  context.md  create_tables_add_data.sql  docker-compose-old.yml  docker-compose.yml  index.yaml  load_data.cpp  load_data.sh  main.cpp  run_tests.sh  socialnetworkapi.yaml  socialnetworkcollection.postman_collection.json  start.sh  start_writer.sh  task.md  writer_main.cpp
chat_server/: DockerChat  http_request_factory.h  http_web_server.h
chat_server/handlers/: chat_handler.h
collections_jsons_yamls/: chat.postman_collection.json  chat.yaml  index.yaml  user.postman_collection.json  user.yaml  wall.postman_collection.json  wall.yaml
config/: config.cpp  config.h
database/: cache.h  chat.cpp  chat.h  database.cpp  user.cpp  user.h  wall.cpp  wall.h
docker/: docker-compose.yml
docker/my_service/: Dockerfile
docker/my_writer/: Dockerfile
docker/mysql/: Dockerfile
docs/: components.md  task.md
global_server/: http_request_factory.h  http_web_server.h
global_server/handlers/: chat_handler.h  user_handler.h  wall_handler.h
include/: ChatMessage.h  MyAPI.h  MyRequestHandler.h  MyRequestHandlerFactory.h  User.h  Wall.h
src/: ChatMessage.cpp  MyAPI.cpp  MyRequestHandler.cpp  MyRequestHandlerFactory.cpp  User.cpp  Wall.cpp  main.cpp
user_server/: DockerUser  http_web_server.h
user_server/handlers/: user_handler.h
wall_server/: DockerWall  http_web_server.h
wall_server/handlers/: user_handler.h  (+1 more)
(+1 files in other folders)
